--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -1738,111 +1738,116 @@
                                         <property name="visible">True</property>
                                         <property name="orientation">vertical</property>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton1">
+                                          <widget class="GtkRadioButton" id="prime_target_401">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
-                                            <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">0</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton2">
+                                          <widget class="GtkRadioButton" id="prime_target_402">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
-                                            <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">1</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton3">
+                                          <widget class="GtkRadioButton" id="prime_target_403">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
-                                            <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">2</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton4">
+                                          <widget class="GtkRadioButton" id="prime_target_404">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">3</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton5">
+                                          <widget class="GtkRadioButton" id="prime_target_405">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">4</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton6">
+                                          <widget class="GtkRadioButton" id="prime_target_406">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">5</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton7">
+                                          <widget class="GtkRadioButton" id="prime_target_407">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">6</property>
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkRadioButton" id="radiobutton8">
+                                          <widget class="GtkRadioButton" id="prime_target_408">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">False</property>
                                             <property name="active">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <property name="group">radiobutton1</property>
+                                            <property name="group">prime_target_401</property>
+                                            <signal name="toggled" handler="change_prime_target"/>
                                           </widget>
                                           <packing>
                                             <property name="position">7</property>
@@ -2208,7 +2213,7 @@
                                           </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkEntry" id="missile_502">
+                                          <widget class="GtkEntry" id="defense_502">
                                             <property name="height_request">20</property>
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
@@ -2294,6 +2299,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
+                                        <signal name="clicked" handler="simulate_missile_attack"/>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
