--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -3089,7 +3089,7 @@
                                   <widget class="GtkHBox" id="hbox16">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry4">
+                                      <widget class="GtkEntry" id="target_galaxy">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">2</property>
@@ -3112,7 +3112,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkEntry" id="entry5">
+                                      <widget class="GtkEntry" id="target_system">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">3</property>
@@ -3135,7 +3135,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkEntry" id="entry6">
+                                      <widget class="GtkEntry" id="target_planet">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">2</property>
@@ -3157,7 +3157,7 @@
                                   <widget class="GtkHBox" id="hbox17">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry7">
+                                      <widget class="GtkEntry" id="target_metal">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x25CF;</property>
@@ -3180,7 +3180,7 @@
                                   <widget class="GtkHBox" id="hbox18">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry10">
+                                      <widget class="GtkEntry" id="target_name">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x25CF;</property>
@@ -3201,7 +3201,7 @@
                                   <widget class="GtkHBox" id="hbox19">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry8">
+                                      <widget class="GtkEntry" id="target_crystal">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x25CF;</property>
@@ -3224,7 +3224,7 @@
                                   <widget class="GtkHBox" id="hbox20">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry9">
+                                      <widget class="GtkEntry" id="target_deuterium">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="invisible_char">&#x25CF;</property>
@@ -3253,11 +3253,32 @@
                                         <property name="visible">True</property>
                                         <property name="left_padding">12</property>
                                         <child>
-                                          <widget class="GtkTextView" id="textview1">
-                                            <property name="height_request">60</property>
+                                          <widget class="GtkFrame" id="frame9">
                                             <property name="visible">True</property>
-                                            <property name="can_focus">True</property>
-                                            <property name="wrap_mode">word</property>
+                                            <property name="label_xalign">0</property>
+                                            <property name="shadow_type">out</property>
+                                            <child>
+                                              <widget class="GtkScrolledWindow" id="scrolledwindow1">
+                                                <property name="visible">True</property>
+                                                <property name="can_focus">True</property>
+                                                <property name="hscrollbar_policy">automatic</property>
+                                                <property name="vscrollbar_policy">automatic</property>
+                                                <child>
+                                                  <widget class="GtkTextView" id="spy_report">
+                                                    <property name="height_request">60</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="wrap_mode">word</property>
+                                                  </widget>
+                                                </child>
+                                              </widget>
+                                            </child>
+                                            <child>
+                                              <placeholder/>
+                                              <packing>
+                                                <property name="type">label_item</property>
+                                              </packing>
+                                            </child>
                                           </widget>
                                         </child>
                                       </widget>
@@ -3288,6 +3309,7 @@
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
+                                        <signal name="released" handler="import_spy_report"/>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
