--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -104,7 +104,7 @@
                         <child>
                           <widget class="GtkComboBox" id="acs_combobox">
                             <property name="width_request">60</property>
-                            <property name="height_request">10</property>
+                            <property name="height_request">26</property>
                             <property name="visible">True</property>
                             <property name="active">0</property>
                             <property name="items">1
@@ -127,7 +127,6 @@
                           </widget>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="fill">False</property>
                             <property name="position">1</property>
                           </packing>
                         </child>
@@ -1492,12 +1491,24 @@
                                   <widget class="GtkHBox" id="hbox4">
                                     <property name="visible">True</property>
                                     <child>
+                                      <widget class="GtkButton" id="button10">
+                                        <property name="label">X</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
                                       <widget class="GtkLabel" id="label19">
                                         <property name="visible">True</property>
                                         <property name="label" translatable="yes">&#x410;&#x442;&#x430;&#x43A;&#x443;&#x44E;&#x449;&#x438;&#x439;</property>
                                       </widget>
                                       <packing>
-                                        <property name="position">0</property>
+                                        <property name="position">1</property>
                                       </packing>
                                     </child>
                                     <child>
@@ -1511,7 +1522,7 @@
                                         <signal name="clicked" handler="swap_fleet"/>
                                       </widget>
                                       <packing>
-                                        <property name="position">1</property>
+                                        <property name="position">2</property>
                                       </packing>
                                     </child>
                                     <child>
@@ -1520,7 +1531,19 @@
                                         <property name="label" translatable="yes">&#x41E;&#x431;&#x43E;&#x440;&#x43E;&#x43D;&#x44F;&#x44E;&#x449;&#x438;&#x439;&#x441;&#x44F;</property>
                                       </widget>
                                       <packing>
-                                        <property name="position">2</property>
+                                        <property name="position">3</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkButton" id="button11">
+                                        <property name="label" translatable="yes">X</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">True</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">4</property>
                                       </packing>
                                     </child>
                                   </widget>
@@ -2343,7 +2366,7 @@
                             <child>
                               <widget class="GtkTable" id="table9">
                                 <property name="visible">True</property>
-                                <property name="n_rows">2</property>
+                                <property name="n_rows">3</property>
                                 <property name="n_columns">2</property>
                                 <child>
                                   <widget class="GtkLabel" id="label63">
@@ -2367,7 +2390,7 @@
                                   <widget class="GtkHBox" id="hbox13">
                                     <property name="visible">True</property>
                                     <child>
-                                      <widget class="GtkEntry" id="entry1">
+                                      <widget class="GtkEntry" id="source_galaxy">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">2</property>
@@ -2392,7 +2415,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkEntry" id="entry2">
+                                      <widget class="GtkEntry" id="source_system">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">3</property>
@@ -2417,7 +2440,7 @@
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkEntry" id="entry3">
+                                      <widget class="GtkEntry" id="source_planet">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="max_length">2</property>
@@ -2463,6 +2486,53 @@
                                   <packing>
                                     <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkLabel" id="label86">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">&#x421;&#x43A;&#x43E;&#x440;&#x43E;&#x441;&#x442;&#x44C; &#x444;&#x43B;&#x43E;&#x442;&#x430;</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkHBox" id="hbox15">
+                                    <property name="visible">True</property>
+                                    <child>
+                                      <widget class="GtkLabel" id="label88">
+                                        <property name="visible">True</property>
+                                        <property name="xalign">0</property>
+                                        <property name="label" translatable="yes">x</property>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <widget class="GtkComboBox" id="fleet_factor">
+                                        <property name="height_request">26</property>
+                                        <property name="visible">True</property>
+                                        <property name="active">0</property>
+                                        <property name="items" translatable="yes">1
+1.5</property>
+                                        <signal name="changed" handler="fleet_factor_changed"/>
+                                      </widget>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </widget>
+                                  <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">2</property>
+                                    <property name="bottom_attach">3</property>
                                   </packing>
                                 </child>
                               </widget>
@@ -2751,9 +2821,8 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="entry40">
+                                  <widget class="GtkEntry" id="addition_a_115">
                                     <property name="visible">True</property>
-                                    <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">3</property>
                                     <property name="invisible_char">&#x25CF;</property>
@@ -2773,9 +2842,8 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="entry41">
+                                  <widget class="GtkEntry" id="addition_a_117">
                                     <property name="visible">True</property>
-                                    <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">3</property>
                                     <property name="invisible_char">&#x25CF;</property>
@@ -2795,9 +2863,8 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="entry42">
+                                  <widget class="GtkEntry" id="addition_a_118">
                                     <property name="visible">True</property>
-                                    <property name="sensitive">False</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">3</property>
                                     <property name="invisible_char">&#x25CF;</property>
@@ -2953,7 +3020,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="addition_a_1">
+                                  <widget class="GtkEntry" id="addition_a_613">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">3</property>
@@ -2974,7 +3041,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkEntry" id="addition_a_2">
+                                  <widget class="GtkEntry" id="addition_a_621">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="max_length">3</property>
@@ -4096,7 +4163,8 @@
                                   <widget class="GtkLabel" id="label84">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&#x412;&#x440;&#x435;&#x43C;&#x44F; &#x43F;&#x43E;&#x43B;&#x435;&#x442;&#x430;</property>
+                                    <property name="label" translatable="yes">&#x412;&#x440;&#x435;&#x43C;&#x44F;
+&#x43F;&#x43E;&#x43B;&#x435;&#x442;&#x430;</property>
                                   </widget>
                                   <packing>
                                     <property name="top_attach">8</property>
