--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -4765,6 +4765,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="default_width">440</property>
     <property name="default_height">250</property>
     <property name="transient_for">window_main</property>
+    <signal name="delete_event" handler="window_hide"/>
     <child>
       <widget class="GtkVBox" id="vbox10">
         <property name="visible">True</property>
@@ -4811,6 +4812,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="window_position">center-on-parent</property>
     <property name="destroy_with_parent">True</property>
     <property name="transient_for">window_main</property>
+    <signal name="delete_event" handler="window_hide"/>
     <child>
       <widget class="GtkVBox" id="vbox11">
         <property name="visible">True</property>
@@ -4919,6 +4921,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="modal">True</property>
     <property name="window_position">center-on-parent</property>
     <property name="transient_for">window_main</property>
+    <signal name="delete_event" handler="window_hide"/>
     <child>
       <widget class="GtkVBox" id="vbox5">
         <property name="visible">True</property>
@@ -6716,6 +6719,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="type_hint">normal</property>
     <property name="transient_for">window_main</property>
     <property name="has_separator">False</property>
+    <signal name="delete_event" handler="window_hide"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox2">
         <property name="visible">True</property>
@@ -6930,6 +6934,7 @@ nE0sIghT &lt;admin@coldzone.ru&gt;</property>
     <property name="transient_for">window_main</property>
     <property name="has_separator">False</property>
     <property name="do_overwrite_confirmation">True</property>
+    <signal name="delete_event" handler="window_hide"/>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
