--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -200,7 +200,7 @@
                             <property name="border_width">5</property>
                             <property name="left_padding">12</property>
                             <child>
-                              <widget class="GtkTable" id="table7">
+                              <widget class="GtkTable" id="fleet_table">
                                 <property name="visible">True</property>
                                 <property name="n_rows">15</property>
                                 <property name="n_columns">7</property>
@@ -1689,7 +1689,7 @@
                                 <property name="orientation">vertical</property>
                                 <property name="spacing">4</property>
                                 <child>
-                                  <widget class="GtkTable" id="table1">
+                                  <widget class="GtkTable" id="defence_table">
                                     <property name="visible">True</property>
                                     <property name="n_rows">2</property>
                                     <property name="n_columns">3</property>
