--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -3,10 +3,11 @@
   <!-- interface-requires gtk+ 2.16 -->
   <!-- interface-naming-policy project-wide -->
   <widget class="GtkWindow" id="window_main">
-    <property name="visible">True</property>
     <property name="title" translatable="yes">ColdSim</property>
     <property name="modal">True</property>
+    <property name="window_position">center</property>
     <signal name="destroy" handler="main_quit"/>
+    <signal name="delete_event" handler="store_position"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
