--- a/gui/coldsim.glade
+++ b/gui/coldsim.glade
@@ -4458,7 +4458,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
-                    <signal name="clicked" handler="main_quit"/>
+                    <signal name="clicked" handler="quit_button_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
